--- a/com.restaurantProject/pom.xml
+++ b/com.restaurantProject/pom.xml
@@ -67,7 +67,7 @@
 				<version>3.0.0-M7</version>
 				<configuration>
 					<suiteXmlFiles>
-						<file>parallelTesting.xml</file>
+						<file>grouping.xml</file>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
