--- a/com.restaurantProject/pom.xml
+++ b/com.restaurantProject/pom.xml
@@ -3,6 +3,13 @@
   <groupId>com.restaurantProject</groupId>
   <artifactId>com.restaurantProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+     <maven.compiler.source>17</maven.compiler.source>
+     <maven.compiler.target>17</maven.compiler.target>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+   </properties>
 <dependencies>
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
@@ -46,15 +53,16 @@
 			<artifactId>extentreports</artifactId>
 			<version>5.0.9</version>
 		</dependency>
-		
+		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+           <version>1.18.22</version>
+       </dependency>
 		
 		
 		
 	</dependencies>
-	<properties>
-     <maven.compiler.source>17.0.6</maven.compiler.source>
-     <maven.compiler.target>17.0.6</maven.compiler.target>
-   </properties>
+	
 	
 	
 	<build>
@@ -67,17 +75,17 @@
 				<version>3.0.0-M7</version>
 				<configuration>
 					<suiteXmlFiles>
-						<file>grouping.xml</file>
+						<file>parallelTesting.xml</file>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 			  
 
-    <plugin>
+   <!--  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
-    </plugin>
+    </plugin>-->
 
 
 		</plugins>
